<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lh.sms.client.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.lh.sms.client.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.lh.sms.client.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />
</navigation>
