<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.RecordFragment">
    <!--个人中心-余额-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/close_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_left_white_24dp"
                android:drawablePadding="10dp"
                android:text="@string/balance"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/person_balance_transaction_record"
                android:layout_width="0dp"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="end"
                android:text="@string/money_detail"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/person_menu_item"
            android:orientation="vertical"
            android:padding="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="3dp"
                    android:text="@string/balance_yuan"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/person_balance_user_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="3dp"
                    android:text="@string/money_0"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="30dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow"
                    android:drawableLeft="@drawable/ic_recharge_32dp"
                    android:drawablePadding="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/recharge" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow"
                    android:drawableLeft="@drawable/ic_withdraw_32dp"
                    android:drawablePadding="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/withdraw" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>