<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_light"
            android:padding="20dp">

            <TextView
                android:id="@+id/close_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_left_white_24dp"
                android:drawablePadding="10dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/person_menu_item"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30dp">

                <com.lh.sms.client.ui.view.CircleImageView
                    android:id="@+id/person_user_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_head_black_64dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottom_solid_gray"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:text="@string/account"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="24sp"
                    android:background="@drawable/edit_style"
                    android:textCursorDrawable="@null"
                    android:paddingLeft="20dp"
                    android:paddingBottom="1dp"
                    android:hint="用户名/手机号"
                    android:id="@+id/account"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bottom_solid_gray"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:text="@string/password"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:textSize="24sp"
                    android:background="@drawable/edit_style"
                    android:paddingLeft="20dp"
                    android:paddingBottom="1dp"
                    android:textCursorDrawable="@null"
                    android:hint="请输入登陆密码"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <Button
                    android:id="@+id/person_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:background="@android:color/holo_blue_light"
                    android:textColor="@android:color/white"
                    android:tag="0"
                    android:enabled="false"
                    android:text="登陆"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/person_login_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="忘记密码"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:layout_marginBottom="30dp">
                <TextView
                    android:id="@+id/person_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="没有账号?注册账号"/>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>